# agent-debugger

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: user-guide.md
electron/: main.ts  preload.ts
electron/ipc/: channels.ts  handlers.ts
electron/services/: StoreService.ts  WebSocketServer.ts
examples/: anthropic-example.ts  openai-example.ts
examples/langchain-agent/: langchain_demo.py
examples/python-agent/: simple_agent.py
examples/typescript-agent/: simple_agent.ts
sdk/: README.md  index.ts  package-lock.json  package.json  test.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml  pytest.ini
sdk/python/agent_debugger/: __init__.py  langchain.py  openai.py
sdk/python/examples/: basic_usage.py  langchain_example.py  openai_example.py
sdk/python/tests/: test_client.py
sdk/src/: anthropic.ts  index.ts  langchain.ts  openai.ts  types.ts
src/: App.tsx  main.tsx
src/hooks/: useWebSocket.ts
src/i18n/: index.ts
src/pages/: Dashboard.css  Dashboard.tsx  ErrorDebug.css  ErrorDebug.tsx  MessageLog.css  MessageLog.tsx  MultiAgent.css  MultiAgent.tsx  Performance.css  Performance.tsx  SessionHistory.css  SessionHistory.tsx  Settings.css  Settings.tsx  ThoughtFlow.css  ThoughtFlow.tsx  TokenAnalysis.css  TokenAnalysis.tsx  ToolTrace.css  ToolTrace.tsx
src/stores/: agentStore.ts  themeStore.ts  (+1 more)
tests/: App.test.ts  StoreService.test.ts  WebSocketServer.test.ts  agentStore.test.ts  sessionStore.test.ts  setup.ts
(+19 files in other folders)
