[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-debugger"
version = "0.1.0"
description = "Python SDK for Agent Debugger - Visual debugging and monitoring for AI Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Erpan", email = "erpan@example.com"}
]
keywords = ["ai", "agent", "debugger", "langchain", "openai", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "websocket-client>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/erpan/agent-debugger"
Documentation = "https://github.com/erpan/agent-debugger#readme"
Repository = "https://github.com/erpan/agent-debugger"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_debugger*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
